[package]
name = "clift"
version = "0.1.6"
edition.workspace = true


[dependencies]
clap.workspace = true
env_logger.workspace = true
fastn-observer.workspace = true
ignore.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
