[package]
name = "fastn-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastn-core = { version = "0.1.0", path = "../fastn-core" }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.25", features = ["full"] }
tejar = "0.1"
thiserror = "1.0"
camino = "1"
mime_guess = "2"
walkdir = "2"
serde = "1"
serde_json = "1"
