[package]
name = "fastn-cloud"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino.workspace = true
fastn-core.workspace = true
fastn-ds.workspace = true
futures.workspace = true
home.workspace = true
mime_guess.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tejar.workspace = true
thiserror.workspace = true
tokio.workspace = true
walkdir.workspace = true
