[package]
name = "fastn-context"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
fastn-context-macros = { path = "../fastn-context-macros" }