[package]
name = "fastn-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
default = ["use-config-json"]
use-config-json = []

[dependencies]
actix-http.workspace = true
actix-web.workspace = true
antidote.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
bytes.workspace = true
camino.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
deadpool.workspace = true
diffy.workspace = true
dirs.workspace = true
env_logger.workspace = true
fastn-cache = { path = "../fastn-cache" }
fastn-ds.workspace = true
fastn-expr.workspace = true
fastn-js.workspace = true
fastn-observer.workspace = true
fastn-package.workspace = true
fastn-resolved.workspace = true
fastn-utils.workspace = true
fastn-wasm = { workspace = true, features = ["postgres"] }
ft-sys-shared.workspace = true
ftd-ast.workspace = true
ftd-p1.workspace = true
ftd.workspace = true
futures-core.workspace = true
futures-util.workspace = true
futures.workspace = true
http.workspace = true
ignore.workspace = true
indoc.workspace = true
itertools.workspace = true
mime_guess.workspace = true
once_cell.workspace = true
realm-lang.workspace = true
regex.workspace = true
reqwest.workspace = true
scc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
fbt-lib.workspace = true
indoc.workspace = true
pretty_assertions.workspace = true
