[package]
name = "fastn-daemon"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
tokio.workspace = true
dirs.workspace = true
fastn-p2p = { path = "../v0.5/fastn-p2p" }
fastn-remote.workspace = true
fastn-id52.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
