[package]
name = "fastn-ds"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fastn-utils.workspace = true
fastn-wasm.workspace = true
tokio.workspace = true
thiserror.workspace = true
actix-web.workspace = true
deadpool-postgres.workspace = true
#deadpool.workspace = true
actix-http.workspace = true
#async-lock.workspace = true
http.workspace = true
bytes.workspace = true
camino.workspace = true
#libsqlite3-sys.workspace = true
#futures-util.workspace = true
async-trait.workspace = true
#tokio-postgres.workspace = true
ignore.workspace = true
dirs.workspace = true
tracing.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
once_cell.workspace = true
url.workspace = true
scc.workspace = true
#serde.workspace = true
serde_json.workspace = true
wasmtime.workspace = true
ft-sys-shared = { workspace = true, features = ["rusqlite"] }

