[package]
name = "fastn-ds"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
actix-web.workspace = true
async-trait.workspace = true
bytes.workspace = true
camino.workspace = true
deadpool-postgres.workspace = true
dirs.workspace = true
fastn-utils.workspace = true
fastn-wasm.workspace = true
ft-sys-shared = { workspace = true, features = ["rusqlite"] }
http.workspace = true
ignore.workspace = true
once_cell.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
scc.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
wasmtime.workspace = true
