[package]
name = "fastn-issues"
version = "0.1.0"
edition = "2021"

[dependencies]
ftd = { path = "../ftd" }
rusqlite.workspace = true
thiserror.workspace = true
rink.workspace = true
dioxus-html.workspace = true
dioxus-native-core.workspace = true
dioxus-native-core-macro.workspace = true
futures.workspace = true
tokio.workspace = true
rustc-hash.workspace = true