[package]
name = "fastn-js"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["quickjs"]
deno-core = ["deno_core"]
quickjs = ["rquickjs", "quick-js"]

[dependencies]
pretty.workspace = true
itertools.workspace = true
indoc.workspace = true
fastn-grammar.workspace = true
prettify-js.workspace = true
deno_core = { workspace = true, optional = true }
thiserror.workspace = true

[target.'cfg(not(windows))'.dependencies]
quick-js = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
rquickjs = { workspace = true, optional = true }

[dev-dependencies]
#indoc.workspace = true
