[package]
name = "fastn-js"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]

[dependencies]
pretty.workspace = true
itertools.workspace = true
indoc.workspace = true
fastn-resolved.workspace = true
prettify-js.workspace = true
thiserror.workspace = true

[target.'cfg(not(windows))'.dependencies]
quick-js.workspace = true

[target.'cfg(windows)'.dependencies]
rquickjs.workspace = true

[dev-dependencies]
#indoc.workspace = true
