[package]
name = "fastn-migration"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
deadpool.workspace = true
actix-web.workspace = true
async-lock.workspace = true
rusqlite.workspace = true
deadpool-postgres.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true