[package]
name = "fastn-package"
version = "0.1.0"
edition = "2021"

[dependencies]
# ariadne.workspace = true
async-trait.workspace = true
camino.workspace = true
fastn-issues = { path = "../fastn-issues" }
ftd = { path = "../ftd" }
futures.workspace = true
rusqlite.workspace = true
serde.workspace = true
tokio.workspace = true
