[package]
name = "fastn-package"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
fastn-issues.workspace = true
ftd.workspace = true
ftd-ast.workspace = true
rusqlite.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
futures.workspace = true
