[package]
name = "fastn-package"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
fastn-issues.workspace = true
ftd.workspace = true
serde.workspace = true

[dev-dependencies]
