[package]
name = "fastn-resolved-to-js"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fastn-js.workspace = true
fastn-resolved.workspace = true
itertools.workspace = true
fastn-builtins.workspace = true
indoc.workspace = true
serde.workspace = true
