[package]
name = "fastn-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = ["winit", "env_logger", "log", "wgpu"]
# terminal = ["crossterm"]
# web = ["wasm-bindgen", "web-sys"]

[dependencies]
async-trait.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
env_logger = { workspace = true, optional = true }
fastn-wasm.workspace = true
log = { workspace = true, optional = true }
once_cell.workspace = true
pretty.workspace = true
serde.workspace = true
slotmap.workspace = true
taffy.workspace = true
thiserror.workspace = true
tokio.workspace = true
wasmtime.workspace = true
wgpu = { workspace = true, optional = true }
winit = { workspace = true, optional = true }

[dev-dependencies]
indoc.workspace = true
